[project]
name = "lyst"
version = "0.1.0"
description = "A fast, keyboard-first TUI app for creating and managing multiple lists"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["tui", "todo", "list", "terminal", "textual"]
classifiers = [
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "platformdirs>=4.5.1",
    "textual>=7.5.0",
]

[project.urls]
Repository = "https://github.com/rlt-lab/lyst"

[project.scripts]
lyst = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]
